# bento.rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/bento-cli/: Cargo.toml
crates/bento-cli/src/: main.rs
crates/libbento/: Cargo.toml
crates/libbento/src/: binary_checker.rs  cgroups.rs  config.json  config.rs  config2.rs  fs.rs  lib.rs  networking.rs  overlay.rs  process.rs  seccomp.rs  syscalls.rs  syscalls_clone.rs  syscalls_fork.rs  syscalls_unshare.rs  syscalls_userns.rs
crates/libbento/src/config/: config.rs  mod.rs  network.rs
crates/libbento/src/fs/: fs.rs  mod.rs  overlay.rs  rootfs.rs
crates/libbento/src/rootfs/sys/kernel/: osrelease  version
crates/libbento/tests/: config.rs  fs.rs
examples/busybox/: config.json
scripts/: test_e2e.sh
src/: main.rs
