[package]
name = "libbento"
version = "0.1.0"
edition = "2024"

[dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
serde_with  = "3.0"
thiserror   = "1"
nix = { version = "0.30.1", features = ["sched", "process", "hostname", "user"] }
libc = "0.2.174"
anyhow = "1.0.98"

[dev-dependencies]
tempfile = "3.0"
lazy_static = "1.4"